Fixed Question area spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,7 +56,7 @@ h1,h2 {
     margin: auto;
     color: white;
     text-align: center;
-    padding-top: 70px;
+    padding-top: 30px;
 }
 
 footer { 
@@ -231,6 +231,7 @@ input {
     text-align: center;
     font-size: 2rem;
     color: white;
+    margin-top: 20px;
   }
   
   .hud-main-text { 
